# embedded_examples_kl46z

./: .gitignore  .project  README.md
c_training/: README.md
c_training/assignment1/: README.md  assignment1.c  assignment1.h  assignment1_main.c
c_training/assignment11/: README.md
c_training/assignment2/: README.md  assignment2.c  assignment2.h  assignment2_main.c
c_training/assignment3/: README.md
c_training/assignment3/ex1/main/: ass3_ex1_main.c
c_training/assignment3/ex1/test/: input3.txt  input4.txt  test.sh
c_training/assignment3/ex2/main/: ass3_ex2.c  ass3_ex2.h  ass3_ex2_main.c
c_training/assignment3/ex2/test/: input1.txt  input2.txt  input3.txt
c_training/assignment4/: README.md  linked_list.c  linked_list.h  main.c  node.h  student.c  student.h
c_training/assignment5/: README.md  main.c  srec_reader.c  srec_reader.h
c_training/assignment5/input/: filehandling.srec
c_training/assignment6/: README.md  build.bat  clean.bat  employee.c  employee.h  linked_list.c  linked_list.h  main.c  node.h
c_training/assignment9/ex1/: main.c
c_training/assignment9/quiz1/: main.c
c_training/mocktest/: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENCE  README.md  mocktest
c_training/mocktest/app/: app.c  app.h  fsinfo.c  main.c  util.c  util.h
c_training/mocktest/fat/: fat.c  fat.h
c_training/mocktest/hal/: HAL.c  HAL.h  haltypes.h
c_training/mocktest/main/: main.c
c_training/mocktest/util/: util.c  util.h
mcp/bootloader_demo_app/: .clang-format  board.h  main.c
mcp/bootloader_demo_app/armgcc/: CMakeLists.txt  Makefile
mcp/bootloader_demo_app/iar/: demo_app.eww
mcp/bootloader_demo_app/kds/: .project  demo_app.wsd
mcp/bootloader_demo_app/platform/devices/MKL46Z4/linker/gcc/: MKL46Z256xxx4_flash.ld
mcp/bootloader_demo_app/platform/devices/MKL46Z4/linker/iar/: MKL46Z256xxx4_flash.icf
mcp/bootloader_mocktest/: Flash.c  Flash.h  board.h  loader.c  loader.h  main.c  queue.c  queue.h  srec_reader.c  srec_reader.h  uart.c  uart.h
mcp/bootloader_mocktest/armgcc/: CMakeLists.txt  build_all.bat  build_debug.bat  build_release.bat
mcp/bootloader_mocktest/doc/: mem-layout.md
mcp/bootloader_mocktest/iar/: bootloader_mocktest.ewp  uart_assignment.eww
mcp/bootloader_mocktest/input/: demo_app.srec  empty_app.srec
mcp/bootloader_mocktest/kds/: .project  bootloader_mocktest.wsd
mcp/exception_model/: board.c  board.h  gpio.c  gpio.h  main.c  main.h  port.c  port.h
mcp/exception_model/iar/: exception_model.ewp  exception_model.eww
mcp/exception_model/kds/: .cproject  .project  exception_model.wsd  exception_model_MKL46Z256VLH4 debug jlink.launch  exception_model_MKL46Z256VLH4 debug pne.launch  exception_model_MKL46Z256VLH4 release jlink.launch  exception_model_MKL46Z256VLH4 release pne.launch
mcp/exception_model/lib/ksdk_platform_lib/iar/KL46Z4/: ksdk_platform_lib.ewd  ksdk_platform_lib.ewp
mcp/exception_model/lib/ksdk_platform_lib/kds/KL46Z4/: .cproject  .project
mcp/exception_model/platform/devices/: startup.c
mcp/freertos_scheduling_study/: README.md
mcp/getting_started_ex1/: gpio.h  main.c
mcp/getting_started_ex1/armgcc/: CMakeLists.txt
mcp/getting_started_ex1/iar/: getting_started_ex1.ewp  getting_started_ex1.eww
mcp/getting_started_ex1/kds/: .cproject  .project  getting_started_ex1.wsd  getting_started_ex1_MKL46Z256VLH4 debug jlink.launch  getting_started_ex1_MKL46Z256VLH4 debug pne.launch  getting_started_ex1_MKL46Z256VLH4 release jlink.launch  getting_started_ex1_MKL46Z256VLH4 release pne.launch  getting_started_ex1_MKL46Z256VLL4 debug jlink.launch  getting_started_ex1_MKL46Z256VLL4 debug pne.launch  getting_started_ex1_MKL46Z256VLL4 release jlink.launch  getting_started_ex1_MKL46Z256VLL4 release pne.launch
mcp/getting_started_ex1/lib/ksdk_hal_lib/iar/KL46Z4/: ksdk_hal_lib.ewp
mcp/getting_started_ex1/lib/ksdk_hal_lib/kds/KL46Z4/: .cproject
mcp/getting_started_ex1/platform/drivers/inc/: fsl_smartcard_driver.h
mcp/getting_started_ex2/: board.h  main.c
mcp/getting_started_ex2/iar/: getting_started_ex1.ewp  getting_started_ex1.eww
mcp/getting_started_ex2/kds/: .gitignore  .project  getting_started_ex2.wsd  getting_started_ex2_MKL46Z256VLH4 debug jlink.launch  getting_started_ex2_MKL46Z256VLH4 debug pne.launch  getting_started_ex2_MKL46Z256VLH4 release jlink.launch  getting_started_ex2_MKL46Z256VLH4 release pne.launch  getting_started_ex2_MKL46Z256VLL4 debug jlink.launch  getting_started_ex2_MKL46Z256VLL4 debug pne.launch  getting_started_ex2_MKL46Z256VLL4 release jlink.launch  getting_started_ex2_MKL46Z256VLL4 release pne.launch
mcp/getting_started_ex2/lib/ksdk_hal_lib/iar/KL46Z4/: ksdk_hal_lib.ewp
mcp/getting_started_ex2/lib/ksdk_hal_lib/kds/KL46Z4/: .project
mcp/pit_assignment/: .clang_complete  board.c  main.c  pit.c  pit.h  uart.c  uart.h
mcp/pit_assignment/iar/: pit_assignment.dep  pit_assignment.ewd  pit_assignment.ewp  pit_assignment.ewt  pit_assignment.eww
mcp/pit_assignment/kds/: .cproject  .project  pit_assignment.wsd  pit_assignment_MKL46Z256VLL4 debug jlink.launch  pit_assignment_MKL46Z256VLL4 debug pne.launch  pit_assignment_MKL46Z256VLL4 release jlink.launch  pit_assignment_MKL46Z256VLL4 release pne.launch
mcp/sys_tick/project/: sys_tick.ewd  sys_tick.ewp  sys_tick.eww
mcp/sys_tick/source/: gpio.c  main.c
mcp/uart_assignment/: board.c  board.h  gpio.h  main.c  pit.c  pit.h  port.c  queue.c  queue.h  queue_demo.c  queue_sample.c  srec_reader.c  uart.c  uart.h
mcp/uart_assignment/armgcc/: clean.bat
mcp/uart_assignment/iar/: uart_assignment.ewd  uart_assignment.ewp  uart_assignment.eww
mcp/uart_assignment/kds/: .cproject  .project  uart_assignment.wsd  uart_assignment_MKL46Z256VLH4 debug jlink.launch  uart_assignment_MKL46Z256VLH4 debug pne.launch  uart_assignment_MKL46Z256VLH4 release jlink.launch  uart_assignment_MKL46Z256VLH4 release pne.launch  uart_assignment_MKL46Z256VLL4 debug jlink.launch  uart_assignment_MKL46Z256VLL4 debug pne.launch  uart_assignment_MKL46Z256VLL4 release jlink.launch  uart_assignment_MKL46Z256VLL4 release pne.launch
(+6 files in other folders)
